--- a/backend_v3/requirements.txt
+++ b/backend_v3/requirements.txt
@@ -1,8 +1,8 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-celery==5.3.4
-redis==5.0.1
-librosa==0.10.1
-numpy==1.24.3
-python-multipart==0.0.6
-pydantic==2.5.0
+fastapi>=0.104.0
+uvicorn>=0.24.0
+celery>=5.3.0
+redis>=5.0.0
+librosa>=0.10.0
+numpy>=1.26.0
+python-multipart>=0.0.6
+pydantic>=2.5.0
